--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
+  <img src='https://isilex.github.io/easy-xml/images/background.png'/>
     {% if page.title == "Home" %}
       {{ site.title }} &middot; {{ site.tagline }}
     {% else %}
