--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,8 @@
   </div>
 
   <nav class="sidebar-nav">
-  	<a  class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="http://isilex.github.io/easy-xml-fr"><img class="alignright" src="http://www.humanitesnumeriques.fr/wp-content/uploads/2017/05/Unknown-2.jpeg" width="20px" /></a>
+  	<a  class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="http://isilex.github.io/easy-xml-fr">
+		fr/en</a>
     <a  class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
 
 	
